--- a/front-end/src/styles/_custom.scss
+++ b/front-end/src/styles/_custom.scss
@@ -51,6 +51,10 @@ input, textarea {
 // Override Bootstrap
 .container {
   padding: 0;
+
+  @media (max-width: 710px) {
+    max-width: calc(100% - 60px) !important;
+  }
 }
 
 .row {
