--- a/front-end/src/containers/Root/components/Footer/components/FooterLanguageButton/styles.scss
+++ b/front-end/src/containers/Root/components/Footer/components/FooterLanguageButton/styles.scss
@@ -6,10 +6,22 @@
   img {
     height: 29px;
     margin-right: 60px;
+
+    @media (max-width: 1440px) {
+      margin-right: 30px;
+    }
+
+    @media (max-width: 1200px) {
+      margin-left: 30px;
+    }
   }
 
   span {
     color: #AFAFAF;
     margin: 0 50px;
+
+    @media (max-width: 1200px) {
+      display: none;
+    }
   }
 }
