--- a/front-end/src/containers/Root/components/Footer/components/FooterTopSectionButton/styles.scss
+++ b/front-end/src/containers/Root/components/Footer/components/FooterTopSectionButton/styles.scss
@@ -15,6 +15,16 @@
       height: 25px;
       margin-right: 18px;
     }
+
+    @media (max-width: 1440px) {
+      margin: 0px 40px;
+    }
+
+    @media (max-width: 1200px) {
+      span {
+        display: none;
+      }
+    }
   }
 
   .div-footer-top-section-button-separator {
