--- a/front-end/src/containers/Home/styles.scss
+++ b/front-end/src/containers/Home/styles.scss
@@ -105,6 +105,10 @@
     margin-top: 80px;
     text-align: center;
     font-size: $large-font-size;
+
+    @media (max-width: 710px) {
+      margin-top: 40px;
+    }
   }
 
   .div-feedback-container {
