--- a/front-end/src/containers/Menus/components/MenuItem/styles.scss
+++ b/front-end/src/containers/Menus/components/MenuItem/styles.scss
@@ -52,4 +52,33 @@
       }
     }
   }
+
+  @media (max-width: 710px) {
+    padding: 15px;
+
+    .div-menu-item-name-price {
+      font-size: 14px;
+    }
+
+    .div-time-rating {
+      div, span {
+        font-size: 9px;
+      }
+      
+      img {
+        width: 9px;
+      }
+
+      .div-time, .div-rating {
+        height: 25px;
+        line-height: 25px;
+      }
+    }
+  }
+
+  @media (max-width: 414px) {
+    .img-menu-item {
+      min-height: 200px;
+    }
+  }
 }
