[FE] menu modal responsive

--- a/front-end/src/components/Checkbox/styles.scss
+++ b/front-end/src/components/Checkbox/styles.scss
@@ -12,4 +12,15 @@
   span {
     color: #A0A0A0;
   }
+
+  @media (max-width: 710px) {
+    .img-checkbox {
+      height: 15px;
+      margin-right: 5px;
+    }
+
+    span {
+      font-size: 12px;
+    }
+  }
 }
