--- a/front-end/src/containers/MenuModal/styles.scss
+++ b/front-end/src/containers/MenuModal/styles.scss
@@ -161,12 +161,13 @@
           }
         }
 
-        .div-additional-info {
+        .div-ingredients-list {
           display: flex;
           flex-direction: column;
           margin-top: 40px;
+          margin-bottom: 40px;
 
-          .div-additional-info-title {
+          .div-ingredients-list-title {
             color: #080808;
           }
 
@@ -175,24 +176,24 @@
           }
         }
 
-        .div-special-instructions {
-          display: flex;
-          flex-direction: column;
-          margin-top: 30px;
-          margin-bottom: 30px;
+        // .div-special-instructions {
+        //   display: flex;
+        //   flex-direction: column;
+        //   margin-top: 30px;
+        //   margin-bottom: 30px;
 
-          .div-special-instructions-title {
-            color: #080808;
-          }
+        //   .div-special-instructions-title {
+        //     color: #080808;
+        //   }
 
-          .input-special-instructions {
-            border-radius: 9px;
-            border: 1px solid #A0A0A0;
-            height: 57px;
-            margin-top: 20px;
-            padding: 0 20px;
-          }
-        }
+        //   .input-special-instructions {
+        //     border-radius: 9px;
+        //     border: 1px solid #A0A0A0;
+        //     height: 57px;
+        //     margin-top: 20px;
+        //     padding: 0 20px;
+        //   }
+        // }
 
         .div-opacity-layer-bottom {
           position: absolute;
@@ -326,7 +327,7 @@
         }
 
         .div-menu-modal-description {
-          max-height: 380px;
+          max-height: 300px;
 
           .div-menu-title {
             font-size: $regular-font-size;
@@ -351,10 +352,11 @@
             font-size: 9px;
           }
 
-          .div-additional-info {
+          .div-ingredients-list {
             margin-top: 20px;
+            margin-bottom: 20px;
 
-            .div-additional-info-title {
+            .div-ingredients-list-title {
               font-size: 14px;
             }
             .checkbox {
@@ -362,19 +364,19 @@
             }
           }
 
-          .div-special-instructions {
-            margin-top: 15px;
-            margin-bottom: 15px;
+          // .div-special-instructions {
+          //   margin-top: 15px;
+          //   margin-bottom: 15px;
 
-            .div-special-instructions-title {
-              font-size: 14px;
-            }
-            .input-special-instructions {
-              height: 45px;
-              margin-top: 10px;
-              font-size: 14px;
-            }
-          }
+          //   .div-special-instructions-title {
+          //     font-size: 14px;
+          //   }
+          //   .input-special-instructions {
+          //     height: 45px;
+          //     margin-top: 10px;
+          //     font-size: 14px;
+          //   }
+          // }
         }
         
         .div-menu-modal-cart {
